        dependency penalty.
    - config:
      - 'getNumber': renamed to 'getInteger'.
    - cache/version:
      - 'AvailableAsEntry': renamed to 'Source'.
      - 'availableAs': renamed to 'sources'.
    - download/progress:
      - 'progress': fixed nasty bug with wrong computing total download
        size when at least one download has an unknown size.
    - Link with 'rt'.
    - cache/relation:
      - 'unarchitectureRelationLine': moved to ArchitecturedRelationLine class
        and renamed to 'toRelationLine'.
      - 'ArchitecturedRelationExpression::getHashString': doesn't exist,
        removed its declaration.
    - cache/package:
      - 'operator=': forbidden now.
      - copy constructor: forbidden now.
    - system/worker:
      - Fixed typo which resulted in some action dependencies being lost while
        merging remove and unpack actions.
      - Fixed typos which resulted in many false positives when checking for
        temporary broken pre-depends.
    - download/manager:
      - Added multiple inclusion guards to the header.
      - If download method reported expected download file size after a
        download was started, pass it to download progress object.
    - download/method:
      - 'getNumericAcquireSuboptionForUri': renamed to
        'getIntegerAcquireSuboptionForUri'.
    - download/methodfactory:
      - 'operator=': forbidden now.
    - cache/binaryversion:
      - 'task': removed the field.
    - download/progress:
      - 'finish': renamed to 'finishHook' and moved to protected section.
  * doc:
    - examples:
      - Added 'show-upgradeable' example.
    - reference:
      - Documented static part of the library.
      - Added a build infrastructure.
  * debian:
    - rules:
      - Moved starting buildpoint to top directory (from 'cpp').
    - control:
      - Added build-dependency on doxygen.
      - Added new binary package 'libcupt2-doc-experimental'.
      - The package libcupt2-dev-experimental now suggests